--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
 
 spring.mvc.hiddenmethod.filter.enabled=true
+
+#jwt_secret=XbPfbIHMI6arZ3Y922BhjWgQzWXcXNrz0ogtVhfEd2o
+jwt_secret=${JWT_SECRET}
