--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=TaskPlannerBackendService
 
+server.port=8080
+
 spring.web.resources.static-locations= classpath:/static/
 
 spring.datasource.driver-class-name=org.postgresql.Driver
