--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>task-tracker-backend</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -152,5 +153,7 @@
 			</plugin>
 		</plugins>
 	</build>
+
+
 
 </project>
