add kafka for email service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,5 +22,8 @@ spring.jpa.open-in-view=false
 
 spring.mvc.hiddenmethod.filter.enabled=true
 
-#jwt_secret=XbPfbIHMI6arZ3Y922BhjWgQzWXcXNrz0ogtVhfEd2o
 jwt_secret=${JWT_SECRET}
+
+spring.kafka.bootstrap-servers=kafka:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
